--- a/main.css
+++ b/main.css
@@ -334,9 +334,9 @@ z-index: 5;
     position:relative;
     font-family: cursive;
     font-size:0.6em;
-  top:1vh;
-  left:2vw;
+left:2vw;
     z-index:60;
+
 }
 
 .grid :hover{
@@ -357,13 +357,13 @@ z-index: 5;
 
 /*/////////////////*/
 .iconcontainer{
-    padding-top:3vh;
+    padding-top:-1vh;
     z-index:12;
 display:grid;
 grid-area:2/1/3/2;
 grid-template-columns: 4fr 1fr 1fr 1fr 1fr 1fr;
-
-
+cursor: pointer;
+grid-template-rows: 1fr 1fr;
 /* grid-template-rows:3fr 1fr ; */
 /* border-bottom:1px solid green; */
 /* border:red solid 1px; */
@@ -399,16 +399,9 @@ margin:auto;
 
 
 .icon :hover{
-margin-top:-2px;
-scale:1.5;
-
-/* animation: icon3 1s infinite forwards linear; */
-
-
-
- }
-
-
+    margin-top:-2px;
+    scale:1.5;
+     }
 
  .displaycontainer{
     /* position:relative; */
@@ -477,7 +470,15 @@ scale:1.5;
     
     } */
 /* ////////////////////////////////////column 2///////////////////////////// */
+.profileimg{
+    width:7vw;
 
+}
+.profile{
+    position:relative;
+    z-index: 120;
+    top:10vh;
+}
 .div3{
     grid-area:1/3/2/4;
     height:90vh;
@@ -562,6 +563,7 @@ position:relative;
 .intro{
     width:30vw;
     position:relative;
+    top:-10vh;
     right:-18vw;
 }
 .introduction :hover{
@@ -979,4 +981,42 @@ transform-origin: top center;
 
 
 
-    
+    .tooltip {
+        position: relative;
+        display: inline-block;
+  
+      }
+      
+      .tooltip .tooltiptext {
+        visibility: hidden;
+      
+        width: 110px;
+        background-color: #555;
+        color: #fff;
+        text-align: center;
+        border-radius: 6px;
+        padding: 5px 0;
+        position: absolute;
+        z-index: 100;
+        bottom: 125%;
+        left: 50%;
+        margin-left: -60px;
+        opacity: 0;
+        transition: opacity 0.3s;
+      }
+      
+      .tooltip .tooltiptext::after {
+        content: "";
+        position: absolute;
+        top: 100%;
+        left: 50%;
+        margin-left: -5px;
+        border-width: 5px;
+        border-style: solid;
+        border-color: #555 transparent transparent transparent;
+      }
+      
+      .tooltip:hover .tooltiptext {
+        visibility: visible;
+        opacity: 1;
+      }
